--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,5 +1,8 @@
 <% if user_signed_in? %>
   <h1> Hello <%= current_user.email.split('@').first %></h1>
- <% else %>
+  <%= turbo_frame_tag do %>
+    <h2><%= link_to('Logout', destroy_user_session_path, data: { "turbo-method": :delete }) %></h2>
+  <% end %>
+<% else %>
   <h1>Welcome</h1>
 <% end %>
