--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -4,5 +4,8 @@
     <h2><%= link_to('Logout', destroy_user_session_path, data: { "turbo-method": :delete }) %></h2>
   <% end %>
 <% else %>
+  <%= turbo_frame_tag do %>
   <h1>Welcome</h1>
+    <h2><%= link_to('Sign_up', new_user_registration_path, data: { "turbo-method": :get}) %></h2>
+  <% end %>
 <% end %>
